# mirai-clone

./: .gitignore  AGENTS.md  agentdb.rvf  claude-flow.config.json  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
.claude/: settings.local.json
config/: secrets.example.md
workers/product/: Cargo.toml  wrangler.product.jsonc
workers/product/src/: auth_client.rs  env.rs  lib.rs
workers/product/src/ai/: mod.rs  model_router.rs  tasks.rs  workers_ai.rs
workers/product/src/db/: mod.rs
workers/product/src/domain/: blitz.rs  clone_reference_pool.rs  entitlements.rs  global_reference.rs  idempotency.rs  media_validation.rs  mod.rs  moodboards.rs  status.rs  visual_reference.rs
workers/product/src/http/: error.rs  mod.rs  router.rs
workers/product/src/providers/: higgsfield_agent.rs  higgsfield_auth.rs  higgsfield_mcp.rs  instagram_references.rs  mod.rs  scrapecreators.rs  seedream.rs
workers/product/src/queues/: clone_training.rs  generation.rs  messages.rs  mod.rs  niche_research.rs  reference_pipeline.rs
workers/product/src/routes/: account.rs  blitz.rs  clones.rs  discovery.rs  generations.rs  media.rs  mod.rs  onboarding.rs  telemetry.rs
workers/product/src/services/: accounts.rs  blitz.rs  clone_reference_pool.rs  clones.rs  generation_usage.rs  global_reference_discovery.rs  global_reference_scheduler.rs  media.rs  mod.rs  provider_accounts.rs  queue_reservations.rs  reference_pipeline.rs  visual_reference_cache.rs
workers/product/tests/: domain_tests.rs
(+150 files in other folders)
