[package]
name = "mirai-product-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.6", features = ["d1", "queue"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "js"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "wasm-bindgen"] }

[dev-dependencies]
pretty_assertions = "1"
